fix: header z-index

--- a/pages/HomePage/HomePage.module.css
+++ b/pages/HomePage/HomePage.module.css
@@ -1,6 +1,7 @@
 .header {
   position: sticky;
   top: 0;
+  z-index: 2;
   height: 68px;
   background: var(--bg);
   box-shadow: 0px 5px 8px 0px var(--shadow);
